--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 body{
     font-family: 'Poppins', sans-serif;
     color: rgb(90, 90, 90);
-    margin-top: 70px;
 }
 h1{
     font-size: 80px;
     margin: 0;
 }
+h2{
+    font-size: 50px;
+}
 h3{
     font-size: 30px;
     margin: 0;
+}
+p{
+    font-size: 20px;
 }
 .flexible-area{
     display: flex;
@@ -18,9 +23,10 @@ h3{
 .half-width{
     width: 50%;
     padding-left: 5%;
+    margin-top: 70px;
 }
 .half-width img{
-    width: 100%;
+    width: 80%;
 }
 .orange-color{
     color: orange;
@@ -38,4 +44,24 @@ h3{
 }
 .link-area-margin{
     margin-bottom: 100px;
+}
+.bacground-image{
+    background-image: url(images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.my-recipes{
+    text-align: center;
+    margin: 0 25% ;
+    color: black;
+}
+.recipe-item{
+    width: 27%;
+    padding: 3%;
+    color: black;
+}
+.recipe-item img{
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
 }
