--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p{
     margin-top: 70px;
 }
 .half-width img{
-    width: 80%;
+    height: 110%;
 }
 .orange-color{
     color: orange;
@@ -64,4 +64,24 @@ p{
     width: 100%;
     height: 400px;
     border-radius: 20px;
+}
+footer{
+    background-color: black;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 120px;
+}
+footer p{
+    color: white;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 100;
+}
+footer h2{
+    font-size: 40px;
+}
+.text-gradient{
+    background: linear-gradient(to left, tomato, orange);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
