--- a/style.css
+++ b/style.css
@@ -85,3 +85,15 @@ footer h2{
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
+.top-line{
+    display: inline-block;
+    padding: 40px 50px;
+    background-image: linear-gradient(to right, green, lightgreen);
+    border-top-left-radius: 80%;
+    border-bottom-right-radius: 100%;
+    width: 250px;
+    text-align: center; 
+}
+.right-align{
+    text-align: right;
+}
