--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     color: rgb(90, 90, 90);
+    background-color: rgb(235, 235, 235);
 }
 h1{
     font-size: 80px;
@@ -26,27 +27,28 @@ p{
     margin-top: 70px;
 }
 .half-width img{
-    height: 110%;
+    height: 100%;
+    padding-left: 250px;
 }
 .orange-color{
-    color: orange;
+    color: rgb(255, 165, 0);
 }
 .top-align{
-    margin-top: 150px;
+    margin-top: 80px;
 }
 .link-area{
     text-decoration: none;
-    background-image: linear-gradient(to right, skyblue, blue);
+    background-image: linear-gradient(to left, tomato, orange);
     color: white;
     padding: 30px 50px;
-    border-radius: 50px;
-    margin-top: 150px;
+    border-radius: 40px;
+    box-shadow: 10px 10px 10px rgba(216, 181, 116, 0.541);
 }
 .link-area-margin{
     margin-bottom: 100px;
 }
 .bacground-image{
-    background-image: url(images/background.jpg);
+    background-image: url(images/7.png);
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -58,7 +60,11 @@ p{
 .recipe-item{
     width: 27%;
     padding: 3%;
-    color: black;
+    color: black;    
+    background-color: white;
+    box-shadow: 5px 5px 10px gray;
+    margin: 1%;
+    border-radius: 20px;
 }
 .recipe-item img{
     width: 100%;
@@ -87,13 +93,17 @@ footer h2{
 }
 .top-line{
     display: inline-block;
-    padding: 40px 50px;
-    background-image: linear-gradient(to right, green, lightgreen);
-    border-top-left-radius: 80%;
-    border-bottom-right-radius: 100%;
+    padding: 10px 20px;
+    background-color: #8CC084;
     width: 250px;
     text-align: center; 
+    border-radius: 10px;
+    box-shadow: -5px 5px 10px #C1D7AE;
 }
 .right-align{
     text-align: right;
+}
+.top-line a{
+    text-decoration: none;
+    color: white;
 }
